--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,6 +83,9 @@ define:vars={{ image: `url(${albaProfile.src})` }}
 		transition:width 1s 0s ease-in-out;                                                                                   
 		text-wrap: nowrap;  
 	}
+	.section .hidden {
+		display: none;
+	}
 
 	.section .letter {                                                                                             
      }                
@@ -95,7 +98,7 @@ define:vars={{ image: `url(${albaProfile.src})` }}
 	}
 
 	.section-a:focus{
-		width:200%;
+		width: 200%;
     	outline:0;
 	}
 	
@@ -114,14 +117,14 @@ define:vars={{ image: `url(${albaProfile.src})` }}
 		width: 100%;
 		height: 100%;
 		background-image: var(--image);
-		background-size: cover;
-		background-position: center;
+		background-size:  cover;
+		background-position:  center;
 		filter: contrast(1.2) brightness(0.9);
 		transition: filter 0.3s ease;
 	}
 
 	.section-l:focus-within::before {
-		filter: contrast(1.2) brightness(0.9) blur(8px);
+		filter: contrast(1.2) brightness(0.9) blur(20px);
 	}
 
 	/* Gallery styles */
@@ -132,11 +135,7 @@ define:vars={{ image: `url(${albaProfile.src})` }}
 		margin-top: 12rem;
 		padding: 1rem;
 		width: 100%;
-		height: calc(100vh - 12rem);
-		overflow-y: auto;
 		column-gap: 1rem;
-		scrollbar-width: thick;
-		scrollbar-color: rgba(255,255,255,0.5) transparent;
 		text-wrap: wrap !important;
 	}
 
@@ -154,8 +153,8 @@ define:vars={{ image: `url(${albaProfile.src})` }}
 	}
 
 	.gallery-item {
-		width: 100%;
-		height: auto;
+		width: 100% !important;
+		height: auto !important;
 		margin: 0.5rem;
 		break-inside: avoid;
 		border-radius: 4px;
@@ -190,8 +189,10 @@ define:vars={{ image: `url(${albaProfile.src})` }}
 	}
 
 	.section-l:focus {
-		width:200%;
-		outline:0;
+		width: 200%;
+		outline: 0;
+		overflow-y: auto !important;
+		scrollbar-width: none;
 	}
 
 	.section-l:focus-within .gallery {
@@ -199,7 +200,7 @@ define:vars={{ image: `url(${albaProfile.src})` }}
 	}
 
 	.section-l:focus-within::after {
-		opacity: 0.4;
+		/* opacity: 0.2; */
 	}
 
 	.section-l .letter {
@@ -216,9 +217,6 @@ define:vars={{ image: `url(${albaProfile.src})` }}
     	outline:0;
 	}
 
-	.section .hidden {
-		display: none;
-	}
 
 	.section:focus-within .hidden{
 		display: inline;
