Added a bottom padding to masonry tiles for vertical separation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -157,6 +157,7 @@ define:vars={{ image: `url(${albaProfile.src})` }}
 		height: auto !important;
 		break-inside: avoid;
 		border-radius: 4px;
+		padding-bottom: 0.8rem;
 		transition: transform 0.3s ease;
 		animation: imageLoad 0.3s ease-in;
 	}
