feat: update video embed functionality

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,11 +47,11 @@ const galleryImages = await Astro.glob('/src/assets/pictures/bts/*.jpg');
 				<div class="description">Alba Lily Phillips, Producer (Unscripted)</div>
 				<div class="broadcasts-content hidden">
 					<Video
-						title="Searching for Spain with Eva Longoria"
-						description="Behind the scenes look at the production of this documentary series exploring Spanish cuisine and culture."
-						thumbnailUrl="/src/assets/pictures/bts/Searching for Spain Eva Longoria Madrid Team Photo.jpg"
-						videoUrl="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-						videoProvider="youtube" 
+						title="Searching for Mexico with Eva Longoria"
+						description="Senior AP of Mexico City and Oaxaca episodes"
+						thumbnailUrl="/src/assets/pictures/promos/Eva Longoria Searching for Mexico Promo.jpeg"
+						videoUrl="https://www.imdb.com/video/vi3632055321"
+						videoProvider="imdb" 
 					/>
 				</div>
 			</div>
