--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,9 +50,31 @@ const galleryImages = await Astro.glob('/src/assets/pictures/bts/*.jpg');
 						title="Searching for Mexico with Eva Longoria"
 						description="Senior AP of Mexico City and Oaxaca episodes"
 						thumbnailUrl="/src/assets/pictures/promos/Eva Longoria Searching for Mexico Promo.jpeg"
-						videoUrl="/videos/searching-for-mexico-trailer.mp4"
+						videoUrl="/videos/Eva Longoria Mexico Trailer.mp4"
+					/>
+
+					<Video
+						title="In Vogue - The 90's"
+						description="Description of my role here"
+						thumbnailUrl="/src/assets/pictures/promos/Vogue The 90s Promo.png"
+						videoUrl="/videos/In Vogue Trailer.mp4"
+					/>
+
+					<Video
+						title="Monty Don's Spanish Gardens"
+						description="Description of my role here"
+						thumbnailUrl="/src/assets/pictures/promos/Monty Don Spanish Gardens Promo.png"
+						videoUrl="/videos/Monty Don Spanish Gardens S1E1P1.mp4"
+					/>
+
+					<Video
+						title="Escape to the Château: DIY"
+						description="Description of my role here"
+						thumbnailUrl="/src/assets/pictures/promos/Escape To The Chateau DIY Promo.jpg"
+						videoUrl="/videos/Escape To The Chateau DIY Trailer.mp4"
 					/>
 				</div>
+
 			</div>
 			
 			<div class="section section-a" tabindex="3">
@@ -240,6 +262,8 @@ define:vars={{ image: `url(${albaProfile.src})` }}
 	.section-b:focus{
 		width:200%;
     	outline:0;
+		overflow-y: auto !important;
+		scrollbar-width: none;
 	}
 
 	.broadcasts-content {
