--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,15 +20,16 @@ const galleryImages = await Astro.glob('/src/assets/pictures/bts/*.jpg');
 
 					<p>This is my about me section!</p>
 
-					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+					<p>Hello! Born and raised in London to a Spanish mum and British dad, I grew up bilingual and spent my childhood holidays with family in Spain. I then studied French and Portuguese at university and have since lived, traveled and worked in France, Portugal, Spain, Brazil and Mexico. As an Unscripted TV & Film Producer, I’ve been lucky enough to work in the worlds of Specialist Factual Documentaries and Factual Entertainment. This work has allowed me to dive into tonnes of diverse topics—from the thrilling highs of sports and science, to the exclusive world of fashion, and niches such as horticulture and haute cuisine. My credits include work for the BBC, ITV, Channel 4, CNN, Disney+, Sky, ARTE and Discovery. </p>
 
-					<p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</p>
+					<p>
+						Every project is a new adventure, whether I’m setting up an international shoot on a remote farm in Oaxaca, researching food stories from Francoist Spain, or engineering travel routes for game show contestants, I’m energised by every stage of production. Each project brings with it a new story to tell, new people to meet and lessons to learn. The process of pulling together compelling stories to educate and entertain is what motivates me.</p>
 				</div>
 			</div>
 			
 			<div class="section section-l" tabindex="1">
 				<span class="letter">L</span>
-				<span class="letter hidden">Lookbook</span>
+				<span class="letter hidden">Gallery</span>
 				<div class="gallery hidden">
 					{galleryImages.map((image) => (
 						<img 
@@ -43,13 +44,13 @@ const galleryImages = await Astro.glob('/src/assets/pictures/bts/*.jpg');
 			
 			<div class="section section-b" tabindex="2">
 				<span class="letter">B</span>
-				<span class="letter hidden">roadcasts</span>
-				<div class="description">CREATIVE DOCUMENTARY PRODUCER</div>
+				<span class="letter hidden">Productions</span>
+				<div class="description">Alba Lily Phillips, Producer (Unscripted)</div>
 			</div>
 			
 			<div class="section section-a" tabindex="3">
 				<span class="letter">A</span>
-				<span class="letter hidden">sk me</span>
+				<span class="letter hidden">Contact</span>
 				<div class="hidden about">
 				<p>For business enquiries, please contact me at:</p>
 
