Client's copy and content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,29 +47,50 @@ const galleryImages = await Astro.glob('/src/assets/pictures/bts/*.jpg');
 				<div class="description">Alba Lily Phillips, Producer (Unscripted)</div>
 				<div class="broadcasts-content hidden">
 					<Video
-						title="Searching for Mexico with Eva Longoria"
-						description="Senior AP of Mexico City and Oaxaca episodes"
-						thumbnailUrl="/src/assets/pictures/promos/Eva Longoria Searching for Mexico Promo.jpeg"
-						videoUrl="/videos/Eva Longoria Mexico Trailer.mp4"
-					/>
+					title="Eva Longoria: Searching for Spain, CNN"
+					description="Producer, Hyphenate / Dragonfly, 2024"
+					thumbnailUrl="/src/assets/pictures/promos/Eva Longoria Searching for Spain Promo.png"
+					videoUrl=""
+				/>
 
 					<Video
-						title="In Vogue - The 90's"
-						description="Description of my role here"
+						title="In Vogue: The 90s, Disney+"
+						description="Assistant Producer, Raw TV, 2023"
 						thumbnailUrl="/src/assets/pictures/promos/Vogue The 90s Promo.png"
 						videoUrl="/videos/In Vogue Trailer.mp4"
 					/>
 
 					<Video
-						title="Monty Don's Spanish Gardens"
-						description="Description of my role here"
+						title="Darts (Working Title), Sky"
+						description="Assistant Producer, Dorothy St Pictures, 2023"
+						thumbnailUrl="/src/assets/pictures/promos/Vogue The 90s Promo.png"
+						videoUrl=""
+					/>
+
+					<Video
+						title="Monty Don's Spanish Gardens, BBC2"
+						description="Assistant Producer, AHA Productions, 2022"
 						thumbnailUrl="/src/assets/pictures/promos/Monty Don Spanish Gardens Promo.png"
 						videoUrl="/videos/Monty Don Spanish Gardens S1E1P1.mp4"
 					/>
 
 					<Video
-						title="Escape to the Château: DIY"
-						description="Description of my role here"
+						title="Space Jump: The Legacy of Red Bull Stratos, Discovery+"
+						description="Producer, Supercollider / Red Bull, 2022"
+						thumbnailUrl="/src/assets/pictures/promos/Red Bull Stratos Promo.png"
+						videoUrl=""
+					/>
+
+					<Video
+						title="EMMY Nominated Eva Longoria: Searching for Mexico, CNN"
+						description="Senior Assistant Producer, Raw TV, 2021"
+						thumbnailUrl="/src/assets/pictures/promos/Eva Longoria Searching for Mexico Promo.jpeg"
+						videoUrl="/videos/Eva Longoria Mexico Trailer.mp4"
+					/>
+
+					<Video
+						title="Escape to the Chateau, Channel 4"
+						description="Assistant Producer, Kindling Media, 2020"
 						thumbnailUrl="/src/assets/pictures/promos/Escape To The Chateau DIY Promo.jpg"
 						videoUrl="/videos/Escape To The Chateau DIY Trailer.mp4"
 					/>
