Testing without lazy loading on Vercel

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const sortedGalleryImages = galleryImages.sort((a, b) => {
 									src={image.default.src} 
 									alt="Behind the scenes photo" 
 									class="gallery-item"
-									loading="lazy"
+									/* loading="lazy" */
 								/>
 								<div class="image-caption">{filename}</div>
 							</div>
