Reverted gallery lazy loading
Pruned About Me copy

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,10 +35,6 @@ const sortedGalleryImages = galleryImages.sort((a, b) => {
 
 				<div class="hidden about">
 
-					<p>Hi! I'm Alba Lily Phillips!</p>
-
-					<p>This is my about me section!</p>
-
 					<p>Hello! Born and raised in London to a Spanish mum and British dad, I grew up bilingual and spent my childhood holidays with family in Spain. I then studied French and Portuguese at university and have since lived, traveled and worked in France, Portugal, Spain, Brazil and Mexico. As an Unscripted TV & Film Producer, I’ve been lucky enough to work in the worlds of Specialist Factual Documentaries and Factual Entertainment. This work has allowed me to dive into tonnes of diverse topics—from the thrilling highs of sports and science, to the exclusive world of fashion, and niches such as horticulture and haute cuisine. My credits include work for the BBC, ITV, Channel 4, CNN, Disney+, Sky, ARTE and Discovery. </p>
 
 					<p>
@@ -58,7 +54,7 @@ const sortedGalleryImages = galleryImages.sort((a, b) => {
 									src={image.default.src} 
 									alt="Behind the scenes photo" 
 									class="gallery-item"
-									/* loading="lazy" */
+									loading="lazy"
 								/>
 								<div class="image-caption">{filename}</div>
 							</div>
