--- a/src/components/Productions.astro
+++ b/src/components/Productions.astro
@@ -16,12 +16,12 @@ const { title, description, thumbnailUrl, videoUrl, posterUrl } = Astro.props;
       <>
         <div class="thumbnail-overlay">
           <img src={thumbnailUrl} alt={title} />
-          <button class="play-button" aria-label="Play video">
+          {/* <button class="play-button" aria-label="Play video">
             <svg width="68" height="48" viewBox="0 0 68 48">
               <path class="play-button-bg" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path>
               <path class="play-button-icon" d="M 45,24 27,14 27,34"></path>
             </svg>
-          </button>
+          </button> */}
         </div>
         <div id="embed" class="video-embed hidden">
           <video 
@@ -71,7 +71,7 @@ const { title, description, thumbnailUrl, videoUrl, posterUrl } = Astro.props;
   .image-only img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 8px;
   }
 
@@ -82,12 +82,16 @@ const { title, description, thumbnailUrl, videoUrl, posterUrl } = Astro.props;
     width: 100%;
     height: 100%;
     cursor: pointer;
+    transition: all 0.25s;
+    transition-behavior: allow-discrete;
+    opacity: 1;
+    scale: 1;
   }
 
   .thumbnail-overlay img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   .play-button {
@@ -130,6 +134,9 @@ const { title, description, thumbnailUrl, videoUrl, posterUrl } = Astro.props;
 
   .hidden {
     display: none;
+    opacity: 0;
+    scale: 0;
+    width: 0;
   }
 
   .production-info {
@@ -163,13 +170,15 @@ const { title, description, thumbnailUrl, videoUrl, posterUrl } = Astro.props;
     productionContents.forEach(content => {
       const thumbnail = content.querySelector('.thumbnail-overlay');
       const videoEmbed = content.querySelector('.video-embed');
-      
+
       thumbnail?.addEventListener('click', (e) => {
         e.preventDefault();
         e.stopPropagation();
         if (thumbnail && videoEmbed) {
-          thumbnail.style.display = 'none';
+          /* thumbnail.style.display = 'none'; */
+          thumbnail.classList.add('hidden');
           videoEmbed.classList.remove('hidden');
+          videoEmbed.querySelector('video').play();
           // Keep focus on the parent section
           const section = content.closest('.section');
           if (section) {
@@ -179,6 +188,20 @@ const { title, description, thumbnailUrl, videoUrl, posterUrl } = Astro.props;
       });
     });
   });
+
+document.addEventListener('DOMContentLoaded', () => {                                                            
+   const videos = document.querySelectorAll('video');                                                             
+                                                                                                                  
+   videos.forEach(video => {                                                                                      
+     video.addEventListener('play', (event) => {                                                                  
+       videos.forEach(otherVideo => {                                                                             
+         if (otherVideo !== event.target) {                                                                       
+           otherVideo.pause();                                                                                    
+         }                                                                                                        
+       });                                                                                                        
+     });                                                                                                          
+   });                                                                                                            
+ }); 
 
   document.querySelectorAll('video').forEach(video => {
     video.addEventListener('click', function(e) {
