refactor: Update image paths for Productions component thumbnails

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,49 +88,49 @@ const sortedGalleryImages = galleryImages.sort((a, b) => {
 					<Productions
 					title="Eva Longoria: Searching for Spain, CNN"
 					description="Producer, Hyphenate / Dragonfly, 2024"
-					thumbnailUrl="/src/assets/pictures/promos/Eva Longoria Searching for Spain Promo.png"
+					thumbnailUrl="/promos/Eva Longoria Searching for Spain Promo.png"
 					videoUrl=""
 				/>
 
 					<Productions
 						title="In Vogue: The 90s, Disney+"
 						description="Assistant Producer, Raw TV, 2023"
-						thumbnailUrl="/src/assets/pictures/promos/Vogue The 90s Promo.png"
+						thumbnailUrl="/promos/Vogue The 90s Promo.png"
 						videoUrl="/videos/In Vogue Trailer.mp4"
 					/>
 
 					<Productions
 						title="Darts (Working Title), Sky"
 						description="Assistant Producer, Dorothy St Pictures, 2023"
-						thumbnailUrl="/src/assets/pictures/promos/Sky Sports Darts.png"
+						thumbnailUrl="/promos/Sky Sports Darts.png"
 						videoUrl=""
 					/>
 
 					<Productions
 						title="Monty Don's Spanish Gardens, BBC2"
 						description="Assistant Producer, AHA Productions, 2022"
-						thumbnailUrl="/src/assets/pictures/promos/Monty Don Spanish Gardens Promo.png"
+						thumbnailUrl="/promos/Monty Don Spanish Gardens Promo.png"
 						videoUrl="/videos/Monty Don Spanish Gardens S1E1P1.mp4"
 					/>
 
 					<Productions
 						title="Space Jump: The Legacy of Red Bull Stratos, Discovery+"
 						description="Producer, Supercollider / Red Bull, 2022"
-						thumbnailUrl="/src/assets/pictures/promos/Red Bull Stratos Promo.png"
+						thumbnailUrl="/promos/Red Bull Stratos Promo.png"
 						videoUrl=""
 					/>
 
 					<Productions
 						title="EMMY Nominated Eva Longoria: Searching for Mexico, CNN"
 						description="Senior Assistant Producer, Raw TV, 2021"
-						thumbnailUrl="/src/assets/pictures/promos/Eva Longoria Searching for Mexico Promo.jpeg"
+						thumbnailUrl="/promos/Eva Longoria Searching for Mexico Promo.jpeg"
 						videoUrl="/videos/Eva Longoria Mexico Trailer.mp4"
 					/>
 
 					<Productions
 						title="Escape to the Chateau, Channel 4"
 						description="Assistant Producer, Kindling Media, 2020"
-						thumbnailUrl="/src/assets/pictures/promos/Escape To The Chateau DIY Promo.jpg"
+						thumbnailUrl="/promos/Escape To The Chateau DIY Promo.jpg"
 						videoUrl="/videos/Escape To The Chateau DIY Trailer.mp4"
 					/>
 				</div>
