Swapped Darts Sky placeholder promo for finalised name and poster

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,9 +84,9 @@ const galleryImages = await Astro.glob('/src/assets/pictures/bts/*.jpg');
 					/>
 
 					<Productions
-						title="Darts (Working Title), Sky"
+						title="Game of Throws - Inside Darts, Sky"
 						description="Assistant Producer, Dorothy St Pictures, 2023"
-						thumbnailUrl="/promos/Sky Sports Darts.png"
+						thumbnailUrl="/promos/Game of Throws Inside Darts Promo.png"
 						videoUrl=""
 					/>
 
@@ -517,7 +517,7 @@ define:vars={{ image: `url(${albaProfile.src})` }}
 	.description {
 		position: absolute;
 		margin-top: 2rem;
-		font-family: var(--font-body);
+		font-family: var(--font-heading);
 		font-weight: var(--weight-regular);
 		font-size: 0.875rem;
 		max-width: 15rem;
