--- a/src/components/Productions.astro
+++ b/src/components/Productions.astro
@@ -1,21 +1,31 @@
 ---
 import { Image } from 'astro:assets';
 import type { ImageMetadata } from 'astro';
+import { nullable } from 'astro:schema';
 
 export interface Props {
   title: string;
   description: string;
   thumbnailUrl: string;
   videoUrl?: string;
-  posterUrl?: string;
 }
 
-const { title, description, thumbnailUrl, videoUrl, posterUrl } = Astro.props;
+interface VideoFile {
+  default: Record<string, any>;
+}
 
- const images = import.meta.glob<ImageMetadata>('/src/assets/pictures/promos/*');                                 
+const { title, description, thumbnailUrl, videoUrl } = Astro.props;
+
+ const images = import.meta.glob<ImageMetadata>('/src/content/productions/promos/*');                                 
  const imagePath = Object.keys(images).find(path => path.includes(thumbnailUrl));                                 
  const imagePromise = imagePath ? images[imagePath]() : null;                                                     
  const imageModule = imagePromise ? await imagePromise : null;
+
+ const videos = import.meta.glob<VideoFile>('/src/content/productions/videos/*',
+   { query: '?url' })
+ const videoPath = Object.keys(videos).find(path => path.includes(videoUrl))
+ const videoPromise = videoPath ? videos[videoPath]() : null
+ const videoModule = videoPromise ? await videoPromise : null
 ---
 
 <div class="production-container">
@@ -51,7 +61,7 @@ const { title, description, thumbnailUrl, videoUrl, posterUrl } = Astro.props;
             disablepictureinpicture="true"
             disableRemotePlayback="true"
           >
-            <source src={videoUrl} type="video/mp4">
+            <source src={videoModule.default} type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
