--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alba Lily Phillips</title>
     <link rel="preload" href="/fonts/PlayfairDisplay-Regular.woff2" as="font" type="font/woff2" crossorigin/>
+    <link href="/src/admin/config.yml" type="text/yaml" rel="cms-config-url">
 </head>
 <slot/>
 <div class="credits-tab">
